@@ -71,6 +71,9 @@ New Features
 Bug Fixes
 ----------------------
 
+* SOLR-12094: JsonRecordReader ignores root record fields after the split point.
+  (Przemysław Szeremiota, Andrzej Wisłowski via Dawid Weiss)
+
 * SOLR-12103: Raise CryptoKeys.DEFAULT_KEYPAIR_LENGTH from 1024 to 2048. (Mark Miller)
 
 * SOLR-12107: Fixed a error in [child] transformer that could ocur if documentCache was not used (hossman)
